<resources>
    <string name="app_name">BinaryDroid</string>
    <string name="filebrowser_filepath_placeholder">File path</string>
    <string name="filebrowser_open">Open</string>
    <string name="filebrowser_browserbtn">Browser</string>
    <string name="tab_installedapps">Installed Apps</string>
    <string name="tab_filebrowser">File Browser</string>
    <string name="tab_symbolsearch">Symbol search</string>
    <string name="chk_regexsyntax">Regex syntax</string>
    <string name="chk_ignorecase">Ignore case</string>
    <string name="chk_limitsearch">Limit search to selected applications</string>
    <string name="hint_symbolid">Symbol identifier</string>
    <string name="appicon">Application Icon</string>
    <string name="startsymbolsearch">Start search</string>
    <string name="nosection">Symbol does not point within a section.</string>
    <string name="packageiconstr">Package icon</string>
    <string name="rootrequired">You need to grant root access in order to use this functionality.</string>
    <string name="rootaccept">Accept</string>
    <string name="rootmsg">In order to use this functionality this application requires superuser access.</string>
    <string name="rootdeny">Deny</string>
    <string name="rootreq">Root request</string>
    <string name="couldntgetsymbols">Failed to fetch symbols of current file</string>
    <string name="binarynotexists">Binary file does not exists!</string>
    <string name="searchingsymbol">Searching..</string>
    <string name="missingsymbolname">Please input a symbol name to search for</string>
    <string name="invalidregexsyntax">Invalid regex syntax</string>
    <string name="disassembler">Disassembler</string>
    <string name="hexeditor">HexViewer</string>
    <string name="symbollist">Symbols</string>
    <string name="symbolgotoquestion">How do you want to view the symbol?</string>
    <string name="secetionunknown">Unknown</string>
    <string name="address">Address</string>
    <string name="assembly">Assembly</string>
    <string name="dialog_abort">Abort</string>
    <string name="dialog_assemble">Assemble</string>
    <string name="asmerr_lookupfail">Invalid Syntax, tried to lookup: %1$s</string>
    <string name="asmerr_limitreached">Assembling failed, failure limit reached</string>
    <string name="asmerr_cannotasm">Failed to assemble; please check the operands</string>
    <string name="asmerr_untermreglist">Unterminated register list</string>
    <string name="asmerr_unexpectedchar">Unexpected character at: %1$s (original input: %2$s)</string>
    <string name="asmerr_unrecognizedtoken">Unrecognized token: %1$s (original input: %2$s)</string>
    <string name="asmerr_invreg">Invalid register: %1$s</string>
    <string name="pleaseinputstuff">Please input address and assembly code</string>
    <string name="menu_assemble">Assemble</string>
    <string name="menu_savefile">Save modified file</string>
    <string name="saveyes">Save</string>
    <string name="saveno">Back</string>
    <string name="savefileerror">Couldn\'t save file, please check the path</string>
    <string name="missingwriteperm">In order to save the file you must grant write storage permissions</string>
    <string name="savecomplete">Save complete!</string>
    <string name="invalidelffile">Invalid ELF file</string>
    <string name="missingreadperm">Can\'t open file without read permissions!</string>
    <string name="invalidpath">Invalid file path</string>
</resources>
